no need for nginx

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <meta http-equiv="refresh" content="60" />
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    <body>
+        <!-- <p>Date/Time: <span id="datetime"></span></p>
+        <script>
+            var dt = new Date();
+            document.getElementById("datetime").innerHTML = dt.toLocaleString();
+        </script>  -->
+        <!-- <iframe src="scan.pdf#toolbar=0" width="100%" height="1000px"></iframe> -->
+        <embed src="scan.pdf#scrollbar=0&toolbar=0&view=fitH&zoom=200" type="application/pdf" width="100%" height="1920px" />
 
-</body>
+    </body>
 </html>
+
+
