--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <meta http-equiv="refresh" content="5" />
+    <meta http-equiv="refresh" content="3600" />
 
     <body>
         <!-- <p>Date/Time: <span id="datetime"></span></p>
@@ -9,8 +9,10 @@
             document.getElementById("datetime").innerHTML = dt.toLocaleString();
         </script>  -->
         <!-- <iframe src="scan.pdf#toolbar=0" width="100%" height="1000px"></iframe> -->
-        <embed src="nyt.pdf#scrollbar=0&toolbar=0&view=fitH&zoom=200" type="application/pdf" width="100%" height="1920px" />
+        <div style="width: 100%; height: 100vh">
 
+        <embed src="nyt.pdf#scrollbar=0&toolbar=0&view=fitH&zoom=100" type="application/pdf" width="100%" height="10000px" />
+        </div>
     </body>
 </html>
 
