--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,8 @@
             document.getElementById("datetime").innerHTML = dt.toLocaleString();
         </script>  -->
         <!-- <iframe src="scan.pdf#toolbar=0" width="100%" height="1000px"></iframe> -->
-        <embed src="scan.pdf#scrollbar=0&toolbar=0&view=fitH&zoom=100" type="application/pdf" width="100%" height="1920px" />
+        <!-- <embed src="nyt.pdf#scrollbar=0&toolbar=0&view=fitH" type="application/pdf" width="100%" height="100%" /> -->
+        <iframe src="nyt.pdf#scrollbar=0&toolbar=0&view=fitH" style="position:absolute;right:0; top:0; bottom:0; width:100%; height: 100%;"></iframe>
 
     </body>
 </html>
