--- a/static/index.html
+++ b/static/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
     <meta http-equiv="refresh" content="3600" />
-
     <body>
-        <!-- <p>Date/Time: <span id="datetime"></span></p>
-        <script>
-            var dt = new Date();
-            document.getElementById("datetime").innerHTML = dt.toLocaleString();
-        </script>  -->
-        <!-- <iframe src="scan.pdf#toolbar=0" width="100%" height="1000px"></iframe> -->
-        <!-- <embed src="nyt.pdf#scrollbar=0&toolbar=0&view=fitH" type="application/pdf" width="100%" height="100%" /> -->
-        <iframe src="nyt.pdf#scrollbar=0&toolbar=0&view=fitH" style="position:absolute;right:0; top:0; bottom:0; width:100%; height: 100%;"></iframe>
-
+        <iframe src="nyt.pdf#scrollbar=0&toolbar=0&view=fitH&navpanes=0&scrollbar=0" style="position:absolute;right:0; top:0; bottom:0; width:100%; height: 100%;"></iframe>
     </body>
 </html>
 
